<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shifter</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_start">Start Service</string>
    <string name="action_stop">Stop Service</string>
    <string name="subtitle"><b>Shifter: Automatic Profile Changer\n</b></string>
    <string name="create_new_profile">Create New Mode</string>
	<string name="eula_tilte">License Agreement</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Refuse</string>
	<string name="empty">You have not set any mode till yet</string>
	<string name="back">Back to previous screen</string>
	<string name="creator_of_software">This is the first release of Automatic Profile Shifter.\nThis application is developed by Sumit Kumar</string>
	<string name="contributor">Contributor : Keerty Verma</string>
	<string name="helptext">
	    <b>Using this application:</b>\n\nYou can define the time period in which your mobile profile will automatically get shifted from any profile to the defined profile.\nYou have to create a mode before this application to work in desired way. 
	        There are four type of profiles for the user which are Ringtone, Silent, Vibrate and Airplane.\n
	        \nIn Ringtone mode your mobile will be in ringing mode,
	        \nIn Silent mode your mobile will become silent
	        \nIn Vibrate your mobile will be in vibration mode.
	        \nIn Airplane mode every wireless communications through your mobile will be stopped.\n
	        \nYou can customize the modes on the basis of:\n
	        \n1. Ringing Modes
	        \n2. Time
	        \n3. Recurring Days
	        \n\nIn the case of two modes with same properties but different profiles, the mode which was created later will be executed. 
	        \n\nWhen there is no mode set the default mode activated is Ringing Mode.
	        \nIt has an accuracy of 1 minute, which means it scans for mode changes every 1 minute</string>
	<string name="disclaimer">This software is developed as a part of Open source development Project. Any harm or destruction to property because of this software must not be considered as responsibility of owner. You are free to make changes and modify the project according to your requirements without the rights of the original developer.\n</string>
	<string name="set_the_name_of_profile">Set the name of mode</string>
	<string name="Ren_the_profile">Set the new name of mode</string>
	<string name="hint_name_of_profile">Enter the name of mode</string>
	<string name="set_the_profile">Set the profile</string>
	<string name="typeofprofile">typeofprofile</string>
	<string name="set_starting_time">Set start time</string>
	<string name="colon">:</string>
	<string name="set_ending_time">Set end time</string>
	<string name="select_days">Select recurring days</string>
	<string name="sunday">Sunday</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="to">to</string>
	<string name="AM">AM</string>
	<string name="PM">PM</string>
	<string name="Ringtone">Ringtone</string>
	<string name="Vibrate">Vibrate</string>
	<string name="Silent">Silent</string>
	<string name="Modify">Modify</string>
	<string name="Airplane">Airplane</string>
	<string name="Delete">Are you sure you want to delete this profile? </string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
</resources>
