<ScrollView android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:weightSum="1" android:scrollbars="vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/set_the_name_of_profile" android:id="@+id/name_of_profile"/>
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/edit1"
			android:hint="@string/hint_name_of_profile" android:text=""></EditText>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/set_the_profile" />
		<Spinner android:id="@+id/spinner1" android:layout_height="wrap_content"
			android:layout_width="match_parent"></Spinner>
		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/set_starting_time" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView1"></TextView>
		<TimePicker android:id="@+id/timePicker1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/set_ending_time" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView2"></TextView>
		<TimePicker android:id="@+id/timePicker2"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TimePicker>
		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/select_days" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView3"></TextView>
		<TableLayout android:layout_height="0dp"
			android:layout_width="match_parent" android:id="@+id/linearLayout1"
			android:orientation="vertical" android:layout_weight="0.88"
			android:weightSum="1">
			<TableRow android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_width="match_parent"
				 android:layout_weight="0.33">
				<CheckBox android:text="@string/sunday" android:id="@+id/checkBox1"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
				<CheckBox android:text="@string/monday" android:id="@+id/checkBox2"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
				<CheckBox android:text="@string/tuesday" android:id="@+id/checkBox3"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
			</TableRow>
			<TableRow android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_weight="0.33">
				<CheckBox android:layout_height="wrap_content" android:id="@+id/checkBox4"
					android:text="@string/wednesday" android:layout_width="wrap_content"></CheckBox>
				<CheckBox android:text="@string/thursday" android:id="@+id/checkBox5"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
			</TableRow>
			<TableRow android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_width="match_parent"
				 android:layout_weight="0.33">
				<CheckBox android:text="@string/friday" android:id="@+id/checkBox6"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
				<CheckBox android:text="@string/saturday" android:id="@+id/checkBox7"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
			</TableRow>
		</TableLayout>
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:text="@string/save" android:id="@+id/button1" android:layout_weight="1.0"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
			<Button android:text="@string/cancel" android:id="@+id/cancelbutton" 
			android:layout_weight="1.0"
				android:layout_height="fill_parent" android:layout_width="fill_parent"></Button>
</LinearLayout>
	</LinearLayout>
</ScrollView>
