<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
	android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/nameofprofile"
				android:text="@string/subtitle" android:textColor="#c0c0c0"
				android:textStyle="bold" android:textSize="18sp" />
		</LinearLayout>
		<LinearLayout android:orientation="horizontal"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/startinghour"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#c0c0c0" android:textSize="14sp"

				android:layout_marginRight="1sp" />
			<TextView android:text="@string/colon" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#c0c0c0"
				android:textSize="14sp" />
			<TextView android:id="@+id/startingmin"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#c0c0c0" android:textSize="14sp"
				android:layout_marginLeft="1sp" />
			<TextView android:layout_width="wrap_content" android:id="@+id/am_pm_startinghour"
				android:layout_height="wrap_content" android:textColor="#c0c0c0"
				android:textSize="14sp" android:layout_marginLeft="1sp"
				android:layout_marginRight="10sp" />

			<TextView android:text="@string/to" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#c0c0c0"
				android:textSize="14sp" />
			<TextView android:id="@+id/endinghour" android:layout_width="wrap_content"
				android:layout_marginLeft="10sp" android:layout_height="wrap_content"
				android:textColor="#c0c0c0" android:textSize="14sp" />
			<TextView android:text="@string/colon" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#c0c0c0"
				android:textSize="14sp" />
			<TextView android:id="@+id/endingmin" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="#c0c0c0"
				android:textSize="14sp" />
			<TextView android:id="@+id/am_pm_endinghour"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textColor="#c0c0c0" android:textSize="14sp" />

		</LinearLayout>


		<TextView android:id="@+id/typeofprofile"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/typeofprofile" android:textColor="#c0c0c0"
			android:textSize="14sp" />

		<TextView android:id="@+id/mon" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textColor="#c0c0c0"
			android:textSize="14sp" />


	</LinearLayout>    
